[gd_scene load_steps=4 format=3 uid="uid://c4oe5nw5b1cb6"]

[ext_resource type="Script" path="res://scenes/scene_transition.gd" id="1_bt75q"]

[sub_resource type="Animation" id="Animation_2x415"]
resource_name = "fade_from_black"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BlackColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cg75r"]
_data = {
"fade": SubResource("Animation_2x415")
}

[node name="SceneTransition" type="CanvasLayer"]
layer = 100
script = ExtResource("1_bt75q")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BlackColorRect" type="ColorRect" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="TransitionAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
callback_mode_method = 1
libraries = {
"": SubResource("AnimationLibrary_cg75r")
}
